--- a/ConsentFormOut.html
+++ b/ConsentFormOut.html
@@ -1,12 +1,12 @@
 <html>
-  <script src="https://pr1746516305705.my.site.com/pc/s/lightning/lightning.out.js"></script>
+  <script src="https://pr1746516305705.my.site.com/lightning/lightning.out.js"></script>
 
   <div data-lightning-out="true"></div>
 
   <script>
     const appName = 'c.BootsConsentForm';
     const componentName = 'consentForm';
-    const lightningEndpoint = 'https://pr1746516305705.my.site.com/pc/s/';
+    const lightningEndpoint = 'https://pr1746516305705.my.site.com';
     const targetElement = document.querySelector('[data-lightning-out]');
     const componentAttributes = {};
 
