--- a/ConsentFormOut.html
+++ b/ConsentFormOut.html
@@ -1,5 +1,5 @@
 <html>
-  <script src="https://pr1746516305705.my.site.com/lightning/lightning.out.js"></script>
+  <script src="https://pr1746516305705.lightning.force.com/lightning/lightning.out.js"></script>
 
   <div data-lightning-out="true"></div>
 
