--- a/ConsentFormOut.html
+++ b/ConsentFormOut.html
@@ -4,7 +4,7 @@
   <div data-lightning-out="true"></div>
 
   <script>
-    const appName = 'c.BootsConsentForm';
+    const appName = 'c:BootsConsentForm';
     const componentName = 'consentForm';
     const lightningEndpoint = 'https://pr1746516305705.my.site.com';
     const targetElement = document.querySelector('[data-lightning-out]');
