--- a/ConsentFormOut.html
+++ b/ConsentFormOut.html
@@ -1,11 +1,11 @@
-<html>
-  <script src="https://pr1746516305705.lightning.force.com/lightning/lightning.out.js"></script>
+o<html>
+  <script src="https://pr1746516305705.my.site.com/lightning/lightning.out.js"></script>
 
   <div data-lightning-out="true"></div>
 
   <script>
     const appName = 'c:BootsConsentForm';
-    const componentName = 'consentForm';
+    const componentName = 'helloWorld';
     const lightningEndpoint = 'https://pr1746516305705.my.site.com';
     const targetElement = document.querySelector('[data-lightning-out]');
     const componentAttributes = {};
