--- a/ConsentFormOut.html
+++ b/ConsentFormOut.html
@@ -1,13 +1,20 @@
-o<html>
-  <script src="https://pr1746516305705.my.site.com/lightning/lightning.out.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
 
-  <div data-lightning-out="true"></div>
+    <div id="lightningout"></div>
+    
+    <script src="https://pr1746516305705.my.site.com/lightning/lightning.out.js"></script>
 
-  <script>
+    <script>
     const appName = 'c:BootsConsentForm';
-    const componentName = 'helloWorld';
-    const lightningEndpoint = 'https://pr1746516305705.my.site.com';
-    const targetElement = document.querySelector('[data-lightning-out]');
+    const componentName = 'c:helloWorld';
+    const lightningEndpoint = 'https://pr1746516305705.my.site.com/pc/s/';
+    const targetElement = 'lightningout';
     const componentAttributes = {};
 
     $Lightning.use(
@@ -25,4 +32,5 @@ o<html>
       lightningEndpoint,
     );
   </script>
+  </body>
 </html>
