--- a/ConsentFormOut.html
+++ b/ConsentFormOut.html
@@ -8,7 +8,7 @@
     <script>
       const appName = 'c:BootsConsentForm';
       const componentName = 'c:helloWorld';
-      const lightningEndpoint = 'https://pr1746516305705.my.site.com/pc/s/';
+      const lightningEndpoint = 'https://pr1746516305705.my.site.com';
       const targetElement = 'lightningout';
       const componentAttributes = {};
 
