--- a/ConsentFormOut.html
+++ b/ConsentFormOut.html
@@ -7,8 +7,8 @@
 
     <script>
       const appName = 'c:BootsConsentForm';
-      const componentName = 'c:helloWorld';
-      const lightningEndpoint = 'https://pr1746516305705.my.site.com/h';
+      const componentName = 'c:consentForm';
+      const lightningEndpoint = 'https://pr1746516305705.my.site.com/pc';
       const targetElement = 'lightningout';
       const componentAttributes = {};
 
