--- a/ConsentFormOut.html
+++ b/ConsentFormOut.html
@@ -10,7 +10,7 @@
       const componentName = 'c:consentForm';
       const lightningEndpoint = 'https://pr1746516305705.my.site.com/pc';
       const targetElement = 'lightningout';
-      const componentAttributes = {};
+      const componentAttributes = {formId: '2'};
 
       $Lightning.use(
         appName,
